# VkUtility

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
VkUtility/VkUtility/Command/: Command.h
VkUtility/VkUtility/Descriptor/: DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  License
VkUtility/VkUtility/Handle/: CreateDestroy.h  UsingHandle.h
VkUtility/VkUtility/Memory/: Buffer.h  Image.h
VkUtility/VkUtility/Misc/: CreateInfo.h  Exceptions.h  File.h
VkUtility/VkUtility/Shader/: Shader.h
VkUtility/VkUtility/Submit/: ImmediateSubmit.cpp  ImmediateSubmit.h
VkUtility/VkUtility/Sync/: Sync.h
VkUtilityTest/: CMakeLists.txt
VkUtilityTest/VkUtilityTest/: .clang-format
VkUtilityTest/VkUtilityTest/VkUtilityTest/: main.cpp
